--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic NavBar</title>
+    <title>PRODIGY_WD_01 by Varun Reddy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,11 +18,31 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-    <section id="home">Home</section>
-    <section id="about">About</section>
-    <section id="services">Services</section>
-    <section id="portfolio">Portfolio</section>
-    <section id="contact">Contact</section>
+    <section id="home">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Hi, I'm Varun Reddy. I am pursuing an internship at ProdigyInfoTech and studying at GITAM University.</p>
+    </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a final year B.Tech student specializing in web development. I love creating beautiful and functional web applications.</p>
+    </section>
+    <section id="services">
+        <h2>Services</h2>
+        <p>I offer web development services including front-end and back-end development, responsive design, and more.</p>
+    </section>
+    <section id="portfolio">
+        <h2>Portfolio</h2>
+        <p>Here are some of my projects:</p>
+        <ul>
+            <li>Project 1</li>
+            <li>Project 2</li>
+            <li>Project 3</li>
+        </ul>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out to me at <a href="mailto:varun@example.com">varun@example.com</a>.</p>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
